syntax = "proto3";

package keycloak_events;

enum EventType {
  LOGIN = 0;
  LOGIN_ERROR = 1;
  REGISTER = 2;
  REGISTER_ERROR = 3;
  LOGOUT = 4;
  LOGOUT_ERROR = 5;
  CODE_TO_TOKEN = 6;
  CODE_TO_TOKEN_ERROR = 7;
  CLIENT_LOGIN = 8;
  CLIENT_LOGIN_ERROR = 9;
  REFRESH_TOKEN = 10;
  REFRESH_TOKEN_ERROR = 11;
  VALIDATE_ACCESS_TOKEN = 12;
  VALIDATE_ACCESS_TOKEN_ERROR = 13;
  INTROSPECT_TOKEN = 14;
  INTROSPECT_TOKEN_ERROR = 15;
  FEDERATED_IDENTITY_LINK = 16;
  FEDERATED_IDENTITY_LINK_ERROR = 17;
  REMOVE_FEDERATED_IDENTITY = 18;
  REMOVE_FEDERATED_IDENTITY_ERROR = 19;
  UPDATE_EMAIL = 20;
  UPDATE_EMAIL_ERROR = 21;
  UPDATE_PROFILE = 22;
  UPDATE_PROFILE_ERROR = 23;
  UPDATE_PASSWORD = 24;
  UPDATE_PASSWORD_ERROR = 25;
  UPDATE_TOTP = 26;
  UPDATE_TOTP_ERROR = 27;
  VERIFY_EMAIL = 28;
  VERIFY_EMAIL_ERROR = 29;
  VERIFY_PROFILE = 30;
  VERIFY_PROFILE_ERROR = 31;
  REMOVE_TOTP = 32;
  REMOVE_TOTP_ERROR = 33;
  GRANT_CONSENT = 34;
  GRANT_CONSENT_ERROR = 35;
  UPDATE_CONSENT = 36;
  UPDATE_CONSENT_ERROR = 37;
  REVOKE_GRANT = 38;
  REVOKE_GRANT_ERROR = 39;
  SEND_VERIFY_EMAIL = 40;
  SEND_VERIFY_EMAIL_ERROR = 41;
  SEND_RESET_PASSWORD = 42;
  SEND_RESET_PASSWORD_ERROR = 43;
  SEND_IDENTITY_PROVIDER_LINK = 44;
  SEND_IDENTITY_PROVIDER_LINK_ERROR = 45;
  RESET_PASSWORD = 46;
  RESET_PASSWORD_ERROR = 47;
  RESTART_AUTHENTICATION = 48;
  RESTART_AUTHENTICATION_ERROR = 49;
  INVALID_SIGNATURE = 50;
  INVALID_SIGNATURE_ERROR = 51;
  REGISTER_NODE = 52;
  REGISTER_NODE_ERROR = 53;
  UNREGISTER_NODE = 54;
  UNREGISTER_NODE_ERROR = 55;
  USER_INFO_REQUEST = 56;
  USER_INFO_REQUEST_ERROR = 57;
  IDENTITY_PROVIDER_LINK_ACCOUNT = 58;
  IDENTITY_PROVIDER_LINK_ACCOUNT_ERROR = 59;
  IDENTITY_PROVIDER_LOGIN = 60;
  IDENTITY_PROVIDER_LOGIN_ERROR = 61;
  IDENTITY_PROVIDER_FIRST_LOGIN = 62;
  IDENTITY_PROVIDER_FIRST_LOGIN_ERROR = 63;
  IDENTITY_PROVIDER_POST_LOGIN = 64;
  IDENTITY_PROVIDER_POST_LOGIN_ERROR = 65;
  IDENTITY_PROVIDER_RESPONSE = 66;
  IDENTITY_PROVIDER_RESPONSE_ERROR = 67;
  IDENTITY_PROVIDER_RETRIEVE_TOKEN = 68;
  IDENTITY_PROVIDER_RETRIEVE_TOKEN_ERROR = 69;
  IMPERSONATE = 70;
  IMPERSONATE_ERROR = 71;
  CUSTOM_REQUIRED_ACTION = 72;
  CUSTOM_REQUIRED_ACTION_ERROR = 73;
  EXECUTE_ACTIONS = 74;
  EXECUTE_ACTIONS_ERROR = 75;
  EXECUTE_ACTION_TOKEN = 76;
  EXECUTE_ACTION_TOKEN_ERROR = 77;
  CLIENT_INFO = 78;
  CLIENT_INFO_ERROR = 79;
  CLIENT_REGISTER = 80;
  CLIENT_REGISTER_ERROR = 81;
  CLIENT_UPDATE = 82;
  CLIENT_UPDATE_ERROR = 83;
  CLIENT_DELETE = 84;
  CLIENT_DELETE_ERROR = 85;
  CLIENT_INITIATED_ACCOUNT_LINKING = 86;
  CLIENT_INITIATED_ACCOUNT_LINKING_ERROR = 87;
  TOKEN_EXCHANGE = 88;
  TOKEN_EXCHANGE_ERROR = 89;
  OAUTH2_DEVICE_AUTH = 90;
  OAUTH2_DEVICE_AUTH_ERROR = 91;
  OAUTH2_DEVICE_VERIFY_USER_CODE = 92;
  OAUTH2_DEVICE_VERIFY_USER_CODE_ERROR = 93;
  OAUTH2_DEVICE_CODE_TO_TOKEN = 94;
  OAUTH2_DEVICE_CODE_TO_TOKEN_ERROR = 95;
  AUTHREQID_TO_TOKEN = 96;
  AUTHREQID_TO_TOKEN_ERROR = 97;
  PERMISSION_TOKEN = 98;
  PERMISSION_TOKEN_ERROR = 99;
  DELETE_ACCOUNT = 100;
  DELETE_ACCOUNT_ERROR = 101;
  PUSHED_AUTHORIZATION_REQUEST = 102;
  PUSHED_AUTHORIZATION_REQUEST_ERROR = 103;
  USER_DISABLED_BY_PERMANENT_LOCKOUT = 104;
  USER_DISABLED_BY_PERMANENT_LOCKOUT_ERROR = 105;
}


message UserEvent {
  string id = 1;
  double time = 2;
  keycloak_events.EventType type = 3;
  string realmId = 4;
  string clientId = 5;
  string userId = 6;
  string sessionId = 7;
  string ipAddress = 8;
  string error = 9;
  map<string, string> details = 10;
}
